<resources>
    <string name="app_name">棋譜まとめ</string>
    <string name="add">追加</string>
    <string name="add_tab">タブを追加</string>
    <string name="add_kif">棋譜を追加</string>
    <string name="delete">削除</string>
    <string name="delete_tab">タブを削除</string>
    <string name="delete_kif">棋譜を削除</string>
    <string name="edit">編集</string>
    <string name="edit_tab">タブ名を編集</string>
    <string name="edit_kif">棋譜情報を編集</string>
    <string name="sort">並び替え</string>
    <string name="sort_tab">タブを並び替え</string>
    <string name="sort_kif">棋譜を並び替え</string>
    <string name="add_kif_title">タイトル</string>
    <string name="add_kif_title_hint">タイトルを入力してください</string>
    <string name="add_kif_info">対局情報</string>
    <string name="add_kif_tournament">棋戦</string>
    <string name="add_kif_tournament_hint">棋戦名を入力してください</string>
    <string name="add_kif_date">対局日</string>
    <string name="add_kif_date_hint">対局日を入力してください</string>
    <string name="add_kif_sente">先手</string>
    <string name="add_kif_sente_hint">先手対局者名を入力してください</string>
    <string name="add_kif_gote">後手</string>
    <string name="add_kif_gote_hint">後手対局者名を入力してください</string>
    <string name="delete_kif_tab">タブを選ぶ</string>
    <string name="delete_kif_kif">棋譜を選ぶ</string>
    <string name="player_setting">設定</string>
    <string name="player_start">◀◀</string>
    <string name="player_prev">◀</string>
    <string name="player_next">▶</string>
    <string name="player_last">▶▶</string>
</resources>