<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/add_tab"
                android:title="@string/add_tab" />
            <item
                android:id="@+id/add_kif"
                android:title="@string/add_kif" />
        </menu>
    </item>

    <item
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/delete_tab"
                android:title="@string/delete_tab" />
            <item
                android:id="@+id/delete_kif"
                android:title="@string/delete_kif" />
        </menu>
    </item>

    <item
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/edit"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/edit_tab"
                android:title="@string/edit_tab" />
            <item
                android:id="@+id/edit_kif"
                android:title="@string/edit_kif" />
        </menu>
    </item>

    <item
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/sort_tab"
                android:title="@string/sort_tab" />
            <item
                android:id="@+id/sort_kif"
                android:title="@string/sort_kif" />
        </menu>
    </item>
</menu>
